--- a/css/style.less
+++ b/css/style.less
@@ -59,36 +59,39 @@ header .container {
 	}
 }
 /*========================    Меню главной страницы    =======================*/
+nav {
+	background: #fafdfa;
+}
 nav .container{
 	ul.list-inline a {
 		display: inline-block;
 		padding: 15px 10px;
 		text-transform: uppercase;
 		color: #666666;
-		font-weight: bold;
+		font-weight: 300;
+
+		-wevkit-transition: all 0.1s 0.02s ease;
+			 -moz-transition: all 0.1s 0.02s ease;
+				 -o-transition: all 0.1s 0.02s ease;
+			      transition: all 0.1s 0.02s ease;
+
 		&:hover {
 			text-decoration: none;
 			background: #f2bd68;
 			color: #fff;
-
-			-wevkit-transition: background-color .3s;
-				 -moz-transition: background-color .3s;
-					 -o-transition: background-color .3s;
-			        transition: background-color .3s;
 		}
+	}
+	ul.list-inline {
+		margin-bottom: 0px;
 	}
 }
 /*=========================    Фон главной станицы    ========================*/
-section.main_bac {
-	width: 1200px;
-	margin: auto;
-	margin-top: 10px;
-	height: 400px;
-	background: url(../img/main_bac.jpg);
+section#main_bg {
+	background: url(../img/main_bac.jpg) no-repeat center center;
+	background-size: cover;
 	opacity: 0.7;
 	.main_text {
 		margin-top: 100px;
-		margin-left: 10%;
 		span {
 			margin-bottom: 10px;
 			padding: 8px;
@@ -106,8 +109,8 @@ section.main_bac {
 		}
 	}
 	.main_bottom {
-		margin-left: 10%;
-		margin-top: 60px;
+		margin-top: 50px;
+		margin-bottom: 100px;
 		.connect_bot {
 			display: inline-block;
 			margin-right: 10px;
@@ -118,7 +121,6 @@ section.main_bac {
 				text-align: center;
 				border: 2px solid #f2bd68;
 				font-weight: bold;
-				}
 			}
 		}
 		.bot1 a {
@@ -137,7 +139,6 @@ section.main_bac {
 			}
 		}
 		.bot2 a {
-			// border: #00a0df;
 			background: #f2bd68;
 			opacity: 0.9;
 			color: #000;
@@ -158,7 +159,7 @@ section.main_bac {
 			color: #fff;
 			text-decoration: none;
 			text-transform: uppercase;
-			&:hover {
+				&:hover {
 				background-color: rgba(255, 255, 255, 0.8);
 				color: #000;
 				-wevkit-transition: background-color .3s;
@@ -168,6 +169,7 @@ section.main_bac {
 			}
 		}
 	}
+}		
 /*=============== Телефонные станции и Wi-Fi решения ========================*/
 section#station,
 section#wireless_network {
