работа над всплывающими окнами

--- a/css/style.less
+++ b/css/style.less
@@ -153,8 +153,15 @@ section#main_bg {
 			          transition: background-color .3s;
 			}
 		}
-		.bot3 a {
+		.bot3 button {
 			background: transparent;
+			display: block;
+			width: 300px;
+			padding: 13px;
+			text-align: center;
+			border: none;
+			border: 2px solid #f2bd68;
+			font-weight: bold;
 			opacity: 0.9;
 			color: #fff;
 			text-decoration: none;
@@ -368,16 +375,14 @@ footer#contacts {
 		font-size: 16px;
 	}
 }
-
-/*============    ШРИФТЫ    ===========*/
-
-/*============    ШРИФТЫ    ===========*/
-
-/*============    ШРИФТЫ    ===========*/
-
-/*============    ПОДВАЛ    ===========*/
-
 /*============    	ВСПЛЫВАЮЩИЕ ОКНА    ===========*/
+.modal-dialog {
+	margin-top: 10%;
+}
+.header_modal {
+
+}
+
 
 /*============    	АДАПТИВ    ===========*/
 
