добавил кнопку скролла наверх

--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,28 @@
 /*============    ШРИФТЫ    ===========*/
 
-/*============    ГЛАВНЫЙ ЭКРАН    ===========*/
+/*============    Кнопка Наверх    ===========*/
+#toTop {
+	display: none;
+	position:fixed;
+	width:100px;
+	bottom: 40px;
+	right: 40px;
+	padding:10px;
+	border-radius: 0;
+	border: 2px solid #c9c9c9;
+	background: transparent;
+	text-align:center;
+	cursor: pointer;
+	color: #adadad;
+	font-family: verdana;
+	font-size: 16px;
+	&:hover {
+		border: 2px solid #f2bd68;
+		background: #f2bd68;
+		color: #fff;
+		font-weight: bold;
+	}
+}
 
 /*============    Глобальные настройки    ===========*/
 * {
