--- a/css/style.less
+++ b/css/style.less
@@ -11,11 +11,12 @@
 	border-radius: 0;
 	border: 2px solid #c9c9c9;
 	background: transparent;
+	text-transform: uppercase;
 	text-align:center;
 	cursor: pointer;
 	color: #adadad;
 	font-family: verdana;
-	font-size: 16px;
+	font-size: 14px;
 	&:hover {
 		border: 2px solid #f2bd68;
 		background: #f2bd68;
