--- a/css/style.less
+++ b/css/style.less
@@ -24,8 +24,7 @@
 		font-weight: bold;
 	}
 }
-
-/*============    Глобальные настройки    ===========*/
+/*===========================    Глобальные настройки    ========================*/
 * {
 	margin: 0;
 	padding: 0;
@@ -47,7 +46,7 @@ a:active {
 button:focus {
 	outline: none;
 }
-/*========================    Шапка    =======================*/
+/*============================    Шапка    ============================*/
 header {
 	height: 110px; 
 	.logotype {
@@ -88,11 +87,6 @@ header {
 }
 /*========================    Меню главной страницы    =======================*/
 nav {
-	top: 110px; /*высота шапки в пикселях*/
-	position: fixed;
-	z-index: 100;
-	width: 100%;
-	background: #ededed;
 	ul.list-inline a {
 		display: inline-block;
 		padding: 15px 10px;
@@ -114,6 +108,11 @@ nav {
 	ul.list-inline {
 		margin-bottom: 0px;
 	}
+	top: 110px; /*высота шапки в пикселях*/
+	position: fixed;
+	z-index: 100;
+	width: 100%;
+	background: #ededed;
 }
 
 /*=========================    Фон главной станицы    ========================*/
@@ -123,13 +122,16 @@ section#main_bg {
 	opacity: 0.7;
 	.main_text {
 		margin-top: 100px;
-		span {
+		p {
+
+			span {
 			margin-bottom: 10px;
 			padding: 8px;
 			text-transform: uppercase;
 			background: #f2bd68;
 			color: #000;
 			font-weight: bold;
+			line-height: 200%;
 			a {
 				text-decoration: none;
 				color: #666;
@@ -138,6 +140,8 @@ section#main_bg {
 				}
 			}
 		}
+		}
+		 
 	}
 	.main_bottom {
 		margin-top: 50px;
@@ -303,26 +307,50 @@ section#services {
 		.carousel-control.left {
 			background-image: none;
 		}
-	}
-	.item {
+		.item {
 			padding: 5px 5px 5px 25px;
 			border: 1px solid #f2f2f2;
 			border-width: 1px 0px 1px 0px;
-			// background: #f8f8f8;
 			color: #eaa744;
-			p {
-				font-size: 16px;
-				color: #666666;
-				&:before {
-					content: " ";
-					display: inline-block;
-					width: 32px;
-					height: 32px;
-					background: url(../img/slider_icon/pointer.png) no-repeat center center;
-					opacity: 0.5;
+			.map_object {
+				margin-top: 0px;
+				height: 280px;
+			}
+			.item_block	{
+				display: inline-block;
+				// margin-top: 10px;
+				// margin-bottom: 10px;
+				// margin-left: 10px;
+				p {
+					font-size: 18px;
+					color: #666666;
+					text-decoration: underline;
+					font-weight: bold;
+					&:before {
+						content: " ";
+						display: inline-block;
+						margin-right: 10px;
+						width: 16px;
+						height: 16px;
+						background: url(../img/slider_icon/pointer.png) no-repeat center center;
+						opacity: 0.5;
+					}
 				}
 			}
-		}
+			.block_name {
+				h3 {
+					padding: 0;
+					font-weight: bold;
+				}
+				
+			}
+			.block_address {
+				p {
+					vertical-align: middle;
+				}
+			}
+		}		
+	}		
 }
 /*=======================    Подвал    ==========================*/
 footer#contacts {
@@ -380,7 +408,7 @@ footer#contacts {
 		font-size: 16px;
 	}
 }
-/*============    	ВСПЛЫВАЮЩИЕ ОКНА    ===========*/
+/*==========================    	ВСПЛЫВАЮЩИЕ ОКНА    ========================*/
 .modal-dialog {
 	margin-top: 10%;
 }
@@ -450,24 +478,7 @@ footer#contacts {
 		color: #666666;
 	}
 }
-/*============    	АДАПТИВ    ===========*/
 
-@media(min-width:0px) and (max-width:320px) {
-	
-}
+/*=======================    	АДАПТИВ    ======================*/
 
-@media(min-width:321px) and (max-width:480px) {
-	
-}
-
-@media(min-width:481px) and (max-width:768px) {
-	
-}
-
-@media(min-width:769px) and (max-width:992px) {
-	
-}
-
-@media(min-width:993px) and (max-width:1200px) {
-	
-}
+@import "media.less";
