--- a/css/style.less
+++ b/css/style.less
@@ -125,23 +125,22 @@ section#main_bg {
 		p {
 
 			span {
-			margin-bottom: 10px;
-			padding: 8px;
-			text-transform: uppercase;
-			background: #f2bd68;
-			color: #000;
-			font-weight: bold;
-			line-height: 200%;
-			a {
-				text-decoration: none;
-				color: #666;
-				&:hover {
-					color: #4b9df9;
+				margin-bottom: 10px;
+				padding: 8px;
+				text-transform: uppercase;
+				background: #f2bd68;
+				color: #000;
+				font-weight: bold;
+				line-height: 200%;
+				a {
+					text-decoration: none;
+					color: #666;
+					&:hover {
+						color: #4b9df9;
+					}
 				}
 			}
-		}
-		}
-		 
+		} 
 	}
 	.main_bottom {
 		margin-top: 50px;
@@ -318,10 +317,18 @@ section#services {
 			}
 			.item_block	{
 				display: inline-block;
-				// margin-top: 10px;
-				// margin-bottom: 10px;
-				// margin-left: 10px;
+			}
+			.block_name {
+				h3 {
+					margin-top: 10px;
+					padding: 0;
+					font-weight: bold;
+				}
+			}
+			.block_address {
+				padding-top: 10px;
 				p {
+					vertical-align: bottom;
 					font-size: 18px;
 					color: #666666;
 					text-decoration: underline;
@@ -337,18 +344,6 @@ section#services {
 					}
 				}
 			}
-			.block_name {
-				h3 {
-					padding: 0;
-					font-weight: bold;
-				}
-				
-			}
-			.block_address {
-				p {
-					vertical-align: middle;
-				}
-			}
 		}		
 	}		
 }
@@ -361,6 +356,8 @@ footer#contacts {
 	color: #ffffff;
 	vertical-align: middle;
 	.map_cont {
+		width: 100%;
+		height: 290px;
 		margin-bottom: 30px;
 	}
 	.cont_info {
