--- a/css/style.less
+++ b/css/style.less
@@ -17,6 +17,7 @@
 	color: #adadad;
 	font-family: verdana;
 	font-size: 14px;
+	z-index: 100;
 	&:hover {
 		border: 2px solid #f2bd68;
 		background: #f2bd68;
@@ -123,7 +124,6 @@ section#main_bg {
 	.main_text {
 		margin-top: 100px;
 		p {
-
 			span {
 				margin-bottom: 10px;
 				padding: 8px;
